--- a/QFun/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/QFun/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -19,9 +19,9 @@
         <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Input.UserName"></label>
+                <label>Användarnamn</label>
                 <input asp-for="Input.UserName" class="form-control" />
-                <label asp-for="Input.Email"></label>
+                <label>Email</label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
