--- a/QFun/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/QFun/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,17 +1,16 @@
 ﻿@page
 @model ExternalLoginModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registrera";
 }
 
 <h1>@ViewData["Title"]</h1>
-<h4 id="external-login-title">Associate your @Model.ProviderDisplayName account.</h4>
+<h4 id="external-login-title">Associera ditt @Model.ProviderDisplayName konto.</h4>
 <hr />
 
 <p id="external-login-description" class="text-info">
-    You've successfully authenticated with <strong>@Model.ProviderDisplayName</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
+    Du har skapat ett konto med <strong>@Model.ProviderDisplayName</strong>.
+    Skriv in en email för att fortsätta.
 </p>
 
 <div class="row">
@@ -25,7 +24,7 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-primary">Registrera</button>
         </form>
     </div>
 </div>
